--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>请点这里</title>
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
         body {
             background-color: #ccffcc;
             display: flex;
@@ -26,8 +31,10 @@
             z-index: 10;
         }
         .heart {
-            width: 200px;
-            height: 180px;
+            width: 80vw;
+            height: 70vh;
+            max-width: 1200px;
+            max-height: 900px;
             position: relative;
             display: flex;
             justify-content: center;
@@ -37,8 +44,8 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 200px;
-            height: 180px;
+            width: 100%;
+            height: 100%;
         }
         .heart-text {
             position: absolute;
@@ -46,9 +53,12 @@
             left: 50%;
             transform: translate(-50%, -50%);
             color: #fff;
-            font-size: 2.5em;
+            font-size: 7vw;
             font-weight: bold;
+            white-space: nowrap;
+            letter-spacing: 0.2em;
             pointer-events: none;
+            text-align: center;
         }
         .green-btn {
             padding: 30px 60px;
@@ -70,7 +80,7 @@
     <button class="green-btn" id="showLoveBtn">请点这里</button>
     <div id="love-container">
         <div class="heart">
-            <svg class="heart-shape" viewBox="0 0 200 180">
+            <svg class="heart-shape" viewBox="0 0 200 180" preserveAspectRatio="none">
                 <path d="M100 170 L30 100 A40 40 0 1 1 100 40 A40 40 0 1 1 170 100 Z" fill="#e53935"/>
             </svg>
             <span class="heart-text">我爱你</span>
